--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
@@ -27,9 +28,10 @@
     "@types/node": "20.14.8",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@vercel/style-guide": "^6.0.0"
+    "@vercel/style-guide": "^6.0.0",
+    "eslint-config-next": "14.2.4"
   },
   "engines": {
-    "node": "20.12.0"
+    "node": "20.13.1"
   }
 }
